[gd_scene load_steps=5 format=3 uid="uid://cohc61yi1xwo4"]

[ext_resource type="PackedScene" uid="uid://c1u2x72vwu7s5" path="res://player.tscn" id="1_a052d"]
[ext_resource type="Script" path="res://game.gd" id="1_kolfk"]

[sub_resource type="Curve2D" id="Curve2D_jw5jl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -653, -565, 0, 0, 0, 0, 2193.03, -576.287, 0, 0, 0, 0, 2175, 1277, 0, 0, 0, 0, -690.787, 1298.21, 0, 0, 0, 0, -666.741, -558.054)
}
point_count = 5

[sub_resource type="SystemFont" id="SystemFont_c7xr5"]

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_kolfk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1912.0
offset_bottom = 1079.0
color = Color(0.741176, 0.937255, 0.886275, 1)

[node name="Player" parent="." instance=ExtResource("1_a052d")]
unique_name_in_owner = true
position = Vector2(891, 592)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-783.629, -543.247)
scale = Vector2(1.16443, 1.15178)
curve = SubResource("Curve2D_jw5jl")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-653, -565)
rotation = -0.00396582

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.71
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.639216)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_c7xr5")
theme_override_font_sizes/font_size = 143
text = "Game Over"

[node name="TreeContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="loot_collected" from="Player" to="." method="_on_player_loot_collected"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
